# learning-rust

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
add-one/: Cargo.toml
add-one/src/: lib.rs
adder/: Cargo.toml
adder/src/: lib.rs
adder/tests/: integration_test.rs
art/: Cargo.toml
art/src/: lib.rs  main.rs
back_of_house/: Cargo.toml
back_of_house/src/: lib.rs  main.rs
branches/: Cargo.toml
branches/src/: main.rs
first_word/: Cargo.toml
first_word/src/: main.rs
front_of_house/: Cargo.toml
front_of_house/src/: lib.rs
guessing_game/: Cargo.toml
guessing_game/src/: main  main.rs
hello-wasm/: Cargo.toml
longest_string/: Cargo.toml
longest_string/src/: main.rs
loops/: Cargo.toml
loops/src/: main.rs
minigrep/: Cargo.toml  poem.txt
minigrep/src/: lib.rs  main.rs
my_crate/: Cargo.toml
my_crate/src/: lib.rs  main.rs
ownership/: Cargo.toml
ownership/src/: main.rs
rectangles/: Cargo.toml
restaurant/: Cargo.toml
slice/: Cargo.toml
ssh/: Cargo.toml
template-web-ssh/: Cargo.toml
template-web-ssh/src/: main.rs
template-web-ssh/templates/: command.html  index.html
test_as/: Cargo.toml
test_box/: Cargo.toml
test_closure/: Cargo.toml
test_enum/: Cargo.toml
test_generics/: Cargo.toml
test_hashmap/: Cargo.toml
test_iter/: Cargo.toml
test_lifecycle_of_struct/: Cargo.toml
test_panic/: Cargo.toml
test_rc/: Cargo.toml
test_refcell/: Cargo.toml
test_reqwest/: Cargo.toml
test_string/: Cargo.toml
test_struct/: Cargo.toml
test_trait/: Cargo.toml
test_vec/: Cargo.toml
variables/: Cargo.toml
(+35 files in other folders)
