[workspace]

members = [
    "guessing_game",
    "variables",
    "branches",
    "loops",
    "template-web-ssh",
    "ownership",
    "first_word",
    "slice",
    "test_struct",
    "rectangles",
    "vue-web-ssh/backend",
    "test_enum",
    "restaurant",
    "back_of_house",
    "test_reqwest",
    "test_as",
    "test_vec",
    "test_string",
    "test_hashmap",
    "test_panic",
    "test_generics",
    "test_trait",
    "longest_string",
    "test_lifecycle_of_struct",
    "adder",
    "minigrep",
    "test_closure"
]