[package]
name = "template-web-ssh"
version = "0.1.0"
authors = ["fgsoap <fgsoap@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssh2 = "0.8.0"
rpassword = "5.0"
actix-web = "3"
askama = "0.9"
log = "0.4"
env_logger = "0.7"

[build-dependencies]
askama = "0.9"
